Updating the download page to open links in new page.

--- a/pages/download.html
+++ b/pages/download.html
@@ -42,10 +42,10 @@
       <p align="justify">Please use one of the following methods to download bot-bot:</br>
 <ul>
   <li>Go to the bot-bot download page and download the latest version:</br>
-  <a href="https://github.com/Imaginea/bot-bot/downloads">https://github.com/Imaginea/bot-bot/downloads</a>
+  <a href="https://github.com/Imaginea/bot-bot/downloads" target="_blank">https://github.com/Imaginea/bot-bot/downloads</a>
   </li>
-<li>Download the latest source code from "master" branch as <a href="https://github.com/Imaginea/bot-bot/zipball/master">zip</a></li>
-<li>Download the latest source code from "master" branch as <a href="https://github.com/Imaginea/bot-bot/tarball/master">tar</a></li>
+<li>Download the latest source code from "master" branch as <a href="https://github.com/Imaginea/bot-bot/zipball/master" target="_blank">zip</a></li>
+<li>Download the latest source code from "master" branch as <a href="https://github.com/Imaginea/bot-bot/tarball/master" target="_blank">tar</a></li>
 <li>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
       <pre>$ git clone git://github.com/Imaginea/bot-bot</pre>
