--- a/pages/download.html
+++ b/pages/download.html
@@ -1,62 +1,29 @@
 <meta charset='utf-8'>
-
-  <style type="text/css">
-    body {
-      margin-top: 1.0em;
-      background-color: #FFFFFF;
-      font-family: Helvetica, Arial, FreeSans, san-serif;
-      color: #000000;
-    }
-    #container {
-      margin: 0 auto;
-      width: 900px;
-    }
-    h1 { font-size: 3.8em; color: #5a2f4e; margin-bottom: 3px; }
-    h1 .medium{ font-size: 0.9em; color: #5a2f4e; margin-bottom: 3px; }
-    h1 .small { font-size: 0.4em; }
-    h1 .smallest { font-size: 0.3em; }
-    h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #5a2f4e; }
-    h3 { text-align: center; color: #5a2f4e; }
-    a { color: #5a2f4e; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { float: right; }
-    pre { background: #FFFFFF; color: #000000; font-family: Helvetica, Arial, FreeSans, san-serif;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-  </style> 
+<link href="../css/style.css" rel="stylesheet" type="text/css"/>
+<script src="../js/jquery-1.7.1.min.js"></script>
 <body>
-<a href="https://github.com/Imaginea/bot-bot"  target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;height:100px;width:100px;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
-  <div id="container">
 
-    <div class="download">
-      <a href="https://github.com/Imaginea/bot-bot/zipball/master">
-        <img border="0" width="80" src="https://github.com/images/modules/download/zip.png"></a>
-      <a href="https://github.com/Imaginea/bot-bot/tarball/master">
-        <img border="0" width="80" src="https://github.com/images/modules/download/tar.png"></a>
-    </div>
-<h1><span class="medium"><a href="https://github.com/Imaginea/bot-bot">bot-bot</a></span>
-      <span class="small">by <a href="https://github.com/Imaginea">Imaginea</a></span></br><span class="smallest">Selenium like automation framework for native android applications.</span></h1>
+<div id="header">
 </div>
-       
       <p align="justify">Please use one of the following methods to download bot-bot:</br>
 <ul>
   <li>Go to the bot-bot download page and download the latest version:</br>
   <a href="https://github.com/Imaginea/bot-bot/downloads" target="_blank">https://github.com/Imaginea/bot-bot/downloads</a>
-  </li>
-<li>Download the latest source code from "master" branch as <a href="https://github.com/Imaginea/bot-bot/zipball/master" target="_blank">zip</a></li>
-<li>Download the latest source code from "master" branch as <a href="https://github.com/Imaginea/bot-bot/tarball/master" target="_blank">tar</a></li>
-<li>You can also clone the project with <a href="http://git-scm.com">Git</a>
+  </li></br>
+<li>You can also clone the project with <a href="http://git-scm.com" target="_blank">Git</a>
       by running:
       <pre>$ git clone git://github.com/Imaginea/bot-bot</pre>
-</li>
+</li></br>
 <li>Download a Tag or browse the code at Github:
 
-<pre><a href="https://github.com/Imaginea/bot-bot" target="_blank">https://github.com/Imaginea/bot-bot</a></pre>
+<p><a href="https://github.com/Imaginea/bot-bot" target="_blank">https://github.com/Imaginea/bot-bot</a></p>
 </li>
 </ul>
 </p>
 <script type="text/javascript" src="../analytics.js"></script>
+<script>
+$("#header").load("./header.html");
+</script>
 </body>
 
 
