--- a/pages/home.html
+++ b/pages/home.html
@@ -1,43 +1,10 @@
 <meta charset='utf-8'>
 
-  <style type="text/css">
-    body {
-      margin-top: 1.0em;
-      background-color: #FFFFFF;
-      font-family: Helvetica, Arial, FreeSans, san-serif;
-      color: #000000;
-    }
-    #container {
-      margin: 0 auto;
-      width: 900px;
-    }
-    h1 { font-size: 3.8em; color: #5a2f4e; margin-bottom: 3px; }
-    h1 .medium{ font-size: 0.9em; color: #5a2f4e; margin-bottom: 3px; }
-    h1 .small { font-size: 0.4em; }
-    h1 .smallest { font-size: 0.3em; }
-    h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #5a2f4e; }
-    h3 { text-align: center; color: #5a2f4e; }
-    a { color: #5a2f4e; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { float: right; }
-    pre { background: #000; color: #fff; padding: 15px;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-  </style>
+<link href="../css/style.css" rel="stylesheet" type="text/css"/>
+<script src="../js/jquery-1.7.1.min.js"></script>
 <body>
 
-<a href="https://github.com/Imaginea/bot-bot"  target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;height:100px;width:100px;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
-  <div id="container">
-
-    <div class="download">
-      <a href="https://github.com/Imaginea/bot-bot/zipball/master">
-        <img border="0" width="80" src="https://github.com/images/modules/download/zip.png"></a>
-      <a href="https://github.com/Imaginea/bot-bot/tarball/master">
-        <img border="0" width="80" src="https://github.com/images/modules/download/tar.png"></a>
-    </div>
-<h1><span class="medium"><a href="https://github.com/Imaginea/bot-bot">bot-bot</a></span>
-      <span class="small">by <a href="https://github.com/Imaginea">Imaginea</a></span></br><span class="smallest">Selenium like automation framework for native android applications.</span></h1>
+<div id="header">
 </div>
       <p align="justify">This is a Selenium like android native app automation framework with record and replay features.
 </br>The tool have three different components:</br>
@@ -77,21 +44,13 @@ Moiz Virani (moiz.v@imaginea.com)
 <br/>      </p>
     
 
-    <h2>Download</h2>
-    <p>
-      You can download this project in either
-      <a href="https://github.com/Imaginea/bot-bot/zipball/master">zip</a> or
-      <a href="https://github.com/Imaginea/bot-bot/tarball/master">tar formats.
-    </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
-      <pre>$ git clone git://github.com/Imaginea/bot-bot</pre>
-    </p>
-
     <div class="footer">
       get the source code on GitHub : <a href="https://github.com/Imaginea/bot-bot">Imaginea/bot-bot</a>
     </div>
 
   </div>
 <script type="text/javascript" src="../analytics.js"></script>
+<script>
+$("#header").load("./header.html");
+</script>
 </body>
