--- a/pages/keywords.html
+++ b/pages/keywords.html
@@ -1,33 +1,12 @@
 <meta charset='utf-8'>
-
-  <style type="text/css">
-    body {
-      margin-top: 1.0em;
-      background-color: #FFFFFF;
-      font-family: Helvetica, Arial, FreeSans, san-serif;
-      color: #000000;
-    }
-    #container {
-      margin: 0 auto;
-      width: 900px;
-    }
-    h1 { font-size: 3.8em; color: #5a2f4e; margin-bottom: 3px; }
-  h1 .medium{ font-size: 0.9em; color: #5a2f4e; margin-bottom: 3px; }
-    h1 .small { font-size: 0.4em; }
-    h1 .smallest { font-size: 0.3em; }
-    h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #5a2f4e; }
-    h3 { text-align: center; color: #5a2f4e; }
-    a { color: #5a2f4e; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { float: right; }
-    pre { background: #FFFFFF; color: #000000; font-family: Helvetica, Arial, FreeSans, san-serif;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-  </style>
+<link href="../css/style.css" rel="stylesheet" type="text/css"/>
+<script src="../js/jquery-1.7.1.min.js"></script>
 <body>
+
+<div id="header">
+</div>
 <script type="text/javascript" src="../analytics.js"></script>
-  <script type="text/javascript">
+<script type="text/javascript">
 var keywords=[];
 keywords=['openapp','checkbuttonpresent','clickbutton','clickmenu','checktextpresent','assertbuttonpresent','asserttextpresent','assertpartialtextpresent','checklocatorpresent','assertlocatorpresent','entertext','clickback','verifyscreen','waitforscreen','assertmenuitem','assertradiobuttonpresent','checkradiobuttonpresent','assertspinnerpresent','clickspinner','clickradiobutton','clickbyid','clicktext','scrollup','scrolldown'];
 
@@ -44,18 +23,6 @@ var sortedKeywords=keywords.sort();
   
 } 
 </script>
-<a href="https://github.com/Imaginea/bot-bot"  target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;height:100px;width:100px;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
-  <div id="container">
-
-    <div class="download">
-      <a href="https://github.com/Imaginea/bot-bot/zipball/master">
-        <img border="0" width="80" src="https://github.com/images/modules/download/zip.png"></a>
-      <a href="https://github.com/Imaginea/bot-bot/tarball/master">
-        <img border="0" width="80" src="https://github.com/images/modules/download/tar.png"></a>
-    </div>
-<h1><span class="medium"><a href="https://github.com/Imaginea/bot-bot">bot-bot</a></span>
-      <span class="small">by <a href="https://github.com/Imaginea">Imaginea</a></span></br><span class="smallest">Selenium like automation framework for native android applications.</span></h1>
-</div>
 <body onload="KeywordDropdown()">
     <h2>Keywords Supported</h2>
     <a name="head"></a>
@@ -64,10 +31,10 @@ var sortedKeywords=keywords.sort();
 </select>
        
       
-<pre>
+<p>
 Bot-bot currently supports following keywords to be used for writing test-cases:
-
-</pre>
+</br>
+</p>
 <table border="1"><th>Keyword</th><th>Description</th><tr><td><a name="assertbuttonpresent">assertbuttonpresent</a></td><td>Needs one argument button-text. Check whether a button with the said text button-text is present in the current view. Fails the test in-case the said button is not found</td>
 </tr>
 <tr><td><a name="assertlocatorpresent">assertlocatorpresent</a></td><td>Needs one arugument the locator. Checks whether the said locator is available on the said page. Fails in case it is not found</td>
@@ -117,4 +84,7 @@ Bot-bot currently supports following keywords to be used for writing test-cases:
 <tr><td><a name="waitforscreen">waitforscreen</a></td><td>Waits for the said screen to appear.</td>
 </tr>
 </table>
+<script>
+$("#header").load("./header.html");
+</script>
 </body>
