--- a/pages/notavailable.html
+++ b/pages/notavailable.html
@@ -27,12 +27,9 @@
 <body>
 <a href="https://github.com/Imaginea/bot-bot"  target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;height:100px;width:100px;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
   <div id="container">
-
     <div class="download">
-      <a href="https://github.com/Imaginea/bot-bot/zipball/master">
-        <img border="0" width="80" src="https://github.com/images/modules/download/zip.png"></a>
-      <a href="https://github.com/Imaginea/bot-bot/tarball/master">
-        <img border="0" width="80" src="https://github.com/images/modules/download/tar.png"></a>
+ <a href="https://github.com/downloads/Imaginea/bot-bot/bot-bot-v0.7.zip">
+        <img border="0" width="80" src="../images/download_button.png" alt="Download the latest version"></a>
     </div>
 <h1><span class="medium"><a href="https://github.com/Imaginea/bot-bot">bot-bot</a></span>
       <span class="small">by <a href="https://github.com/Imaginea">Imaginea</a></span></br><span class="smallest">Selenium like automation framework for native android applications.</span></h1>
