--- a/pages/tryingtoachieve.html
+++ b/pages/tryingtoachieve.html
@@ -1,40 +1,21 @@
 <meta charset='utf-8'>
+<link href="../css/style.css" rel="stylesheet" type="text/css"/>
+<script src="../js/jquery-1.7.1.min.js"></script>
 
-  <style type="text/css">
-    body {
-      margin-top: 1.0em;
-      background-color: #FFFFFF;
-      font-family: Helvetica, Arial, FreeSans, san-serif;
-      color: #000000;
-    }
-    #container {
-      margin: 0 auto;
-      width: 700px;
-    }
-    h1 { font-size: 3.8em; color: #5a2f4e; margin-bottom: 3px; }
-    h1 .small { font-size: 0.4em; }
-    h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #5a2f4e; }
-    h3 { text-align: center; color: #5a2f4e; }
-    a { color: #5a2f4e; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { float: right; }
-    pre { background: #FFFFFF; color: #000000; font-family: Helvetica, Arial, FreeSans, san-serif;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-  </style> 
-
-    <h2>Whats bot-bot is trying to achieve</h2>
+<div id="header" ></div>    
+<h2>Whats bot-bot is trying to achieve</h2>
 
        
       
-<pre>
+<p>
 Currently bot-bot is trying to achieve the status of an open-source automation framework for native android application automation.
 We trying to achieve the following features:
 	1. Recording user interactions from an android native app.
 	2. Support converting the recorded cases to test-files to be used with bot-bot.
 	3. Support for addition/modification of steps by a user for a recorded step and then reverifying them by running it.
 	4. Support for suggestions for identifying elements based on different criterias. 
-</pre>
-
+</p>
+<script>
+$("#header").load("./header.html");
+</script>
 
