--- a/navigator.html
+++ b/navigator.html
@@ -1,33 +1,6 @@
 <html>
-<head>
-
 <meta charset='utf-8'>
-
-  <style type="text/css">
-    body {
-      margin-top: 1.0em;
-      background-color: #FFFFFF	;
-      font-family: Helvetica, Arial, FreeSans, san-serif;
-      color: #000000;
-    }
-    #container {
-      margin: 0 auto;
-      width: 700px;
-    }
-    h1 { font-size: 3.8em; color: #5a2f4e; margin-bottom: 3px; }
-    h1 .small { font-size: 0.4em; }
-    h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #5a2f4e; }
-    h3 { text-align: center; color: #5a2f4e; }
-    h4 { text-align: left; color: #5a2f4e; }
-    a { color: #5a2f4e; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { float: right; }
-    pre { background: #000; color: #fff; padding: 15px;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-  </style>
-</head>
+<link href="./css/style.css" rel="stylesheet" type="text/css"/>
 <body>
 <div style="position:relative">
     <img src="android_new.jpg" style="position:left;width:175px;"/>
@@ -52,6 +25,6 @@
 <li><a target='mainFrame' href='pages/keywords.html'>Supported keywords</a></li>
 <li><a target='mainFrame' href='pages/stilltocome.html'>Still to come</a></li>
 <li><a target='mainFrame' href='pages/releases.html'>Releases</a></li>
-
+<li><a target='mainFrame' href='pages/support.html'>Support</a></li>
 </ul>
 </body></html>
